[tool.poetry]
name = "algorithm_introduction"
version = "0.1.0"
description = ""
authors = ["kanade <melty0404@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
